@@ -13,6 +13,7 @@ Changes:
     * [Bugfix] The scalar analysis does not return the output from the start event when there is no meta to display.
     * [Bugfix] Better test for handling no analysis value in the fluid debugger.
     * [Bugfix] Possible TypeError in the AbstractController.
+    * [Bugfix] Bugfix: The serialized string analysis was too strict to detect all possible candidates.
 
 -----
 
